// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogBoxButton should render TouchableHighlight and pass through props 1`] = `
<TouchableHighlight
  hitSlop={Object {}}
  onPress={[Function]}
  onPressIn={[Function]}
  onPressOut={[Function]}
  tvParallaxProperties={
    Object {
      "enabled": false,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "black",
      }
    }
  >
    <Text>
      Press me
    </Text>
  </View>
</TouchableHighlight>
`;

exports[`LogBoxButton should render only a view without an onPress 1`] = `
<View
  style={
    Object {
      "backgroundColor": "black",
    }
  }
>
  <Text>
    Press me
  </Text>
</View>
`;
